--- a/unit/CMakeLists.txt
+++ b/unit/CMakeLists.txt
@@ -16,7 +16,7 @@ cmake_minimum_required(VERSION 3.10)
 
 aux_source_directory(. UNIT_SRC)
 
-add_executable(unit_test EXCLUDE_FROM_ALL ${UNIT_SRC})
+add_executable(unit_tests EXCLUDE_FROM_ALL ${UNIT_SRC})
 
 ## test flags
 list(APPEND TEST_FLAGS
@@ -24,3 +24,12 @@ list(APPEND TEST_FLAGS
   -DDOCTEST_CONFIG_SUPER_FAST_ASSERTS
   -Wno-deprecated
 )
+
+target_compile_options(unit_tests PRIVATE ${TEST_FLAGS})
+target_link_libraries(unit_tests PRIVATE pthread doctest)
+
+# Add coverage flags if ENABLE_COVERAGE is set
+if(ENABLE_COVERAGE)
+    target_compile_options(unit_tests PRIVATE --coverage -fprofile-arcs -ftest-coverage)
+    target_link_options(unit_tests PRIVATE --coverage)
+endif()
