use fmt lib instead of c++20's <format>

--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -25,5 +25,5 @@ list(APPEND TEST_FLAGS
   -Wno-deprecated
 )
 
-target_link_libraries(reg_test PRIVATE pthread doctest)
+target_link_libraries(reg_test PRIVATE pthread doctest fmt)
 
