--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,18 @@ set(CMAKE_CXX_EXTENSIONS ON)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+# Fix pthread support for Clang
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    set(CMAKE_THREAD_LIBS_INIT "-pthread")
+    set(CMAKE_HAVE_THREADS_LIBRARY 1)
+    set(CMAKE_USE_WIN32_THREADS_INIT 0)
+    set(CMAKE_USE_PTHREADS_INIT 1)
+    set(THREADS_FOUND TRUE)
+endif()
+
 # sanitizer
-set(SANITIZE_PARAM "-fsanitize=address -fsanitize=undefined -fsanitize=bounds -fno-sanitize=vptr -fno-omit-frame-pointer")  # param from seastar.pc
+set(SANITIZE_PARAM "-fsanitize=address -fsanitize=undefined -fsanitize=bounds -fno-sanitize=vptr -fno-omit-frame-pointer")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${SANITIZE_PARAM}")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${SANITIZE_PARAM}")
 set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} ${SANITIZE_PARAM}")
